--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@ body {
 }
 
 .logo {
-    font-size: 45px;
+    font-size: 65px;
     font-weight: bold;
     color: white;
 }
@@ -122,10 +122,8 @@ body {
 /* hero section  */
 
 #hero {
-
-    width: 100%;
-    height: auto;
-    background: url(./assets/hero-bg.png) center/cover no-repeat;
+    min-height: clamp(400px , 60vh, 1200px);
+    background: url(./assets/hero-bg.png) center / cover no-repeat;
     display: flex;
     justify-content: center;
 }
@@ -375,7 +373,7 @@ body {
 }
 
 /* features section  */
-#features{
+#features {
     padding: 120px 0;
 }
 
@@ -404,50 +402,58 @@ body {
     overflow: hidden;
     /* border: none; */
 }
-.iframe-content{
+
+.iframe-content {
     /* border: 1px solid #1a0dd1; */
     overflow: hidden;
 }
-.iframe-content iframe{
+
+.iframe-content iframe {
     width: 100%;
     height: 100%;
 }
-.text-content{
+
+.text-content {
     /* border: 1px solid #11f049; */
     padding: 20px;
-   display: flex;
-   flex-direction: column;
-   justify-content: start;
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
 }
-.text-content h1{
-  font-size: 1.5rem;
-  font-weight: bold;
-  margin-bottom: 12px;
-  text-align: start;
+
+.text-content h1 {
+    font-size: 1.5rem;
+    font-weight: bold;
+    margin-bottom: 12px;
+    text-align: start;
 }
-.text-content p{
-  font-size: 16px;
-  line-height: 24px;
-  color: white;
-  margin-bottom: 12px;
+
+.text-content p {
+    font-size: 16px;
+    line-height: 24px;
+    color: white;
+    margin-bottom: 12px;
 }
-.clock{
+
+.clock {
     display: flex;
     align-items: center;
     gap: 6px;
 
 }
-.clock span{
-color: #00FF88;
+
+.clock span {
+    color: #00FF88;
 
 }
 
 
 /* challenge section  */
-.challenge-container h1{
-  text-align: center;
+.challenge-container h1 {
+    text-align: center;
 }
-.challenge-content{
+
+.challenge-content {
     margin: 40px auto;
     background-color: rgba(53, 17, 101, 0.4);
     /* border: 1px solid #f5f5f5; */
@@ -458,18 +464,21 @@ color: #00FF88;
     align-items: center;
     gap: 24px;
 }
-.image img{
-  object-fit: contain;
+
+.image img {
+    object-fit: contain;
     object-position: center;
 
 }
-.social-logos{
+
+.social-logos {
     display: flex;
     justify-content: start;
     align-items: center;
     gap: 8px;
 }
-.social-logos div{
+
+.social-logos div {
     width: 40px;
     height: 40px;
     border-radius: 50%;
@@ -480,18 +489,69 @@ color: #00FF88;
     gap: 8px;
 }
 
-.host-details h2{
-font-size: 2rem;
-font-weight: bold;
-color: white;
-margin-bottom: 16px;
+.host-details h2 {
+    font-size: 2rem;
+    font-weight: bold;
+    color: white;
+    margin-bottom: 16px;
 }
-.host-details p{
-font-size: 1rem;
-line-height: 24px;
-color: #FFFFFF;
-margin-bottom: 16px;
+
+.host-details p {
+    font-size: 1rem;
+    line-height: 24px;
+    color: #FFFFFF;
+    margin-bottom: 16px;
 }
+
+
+/* footer section  */
+
+#footer {
+    padding: 120px 0;
+    width: 100%;
+    height: auto;
+    background: url(./assets/footer-bg.png) center/cover no-repeat;
+}
+
+.brand-container ul {
+    display: flex;
+    gap: 40px;
+    justify-content: center;
+    align-items: center;
+
+}
+
+.brand-container ul {
+    list-style: none;
+
+}
+
+.brand-container ul li {}
+
+.brand-container ul a {
+    text-decoration: none;
+    display: flex;
+    gap: 8px;
+    align-items: center;
+
+}
+
+.footer-container {
+
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 32px;
+}
+.brand-container p{
+    font-size: 1rem;
+    color: #FAFAFA;
+}
+
+
+
 /* small device  */
 
 
@@ -557,7 +617,7 @@ margin-bottom: 16px;
     #techwave {
         width: 100%;
         padding: 40px 20px;
-       
+
     }
 
     .takewave-container {
@@ -576,15 +636,17 @@ margin-bottom: 16px;
     }
 
     /* feature section  */
-    
-      #features{
-            padding: 40px 16px;
-    
-        }
-    .features-container{
+
+    #features {
+        padding: 40px 16px;
+
+    }
+
+    .features-container {
         width: 100%;
     }
-    .feature-card-container{
+
+    .feature-card-container {
         width: 100%;
         display: flex;
         flex-direction: column;
@@ -592,24 +654,30 @@ margin-bottom: 16px;
     }
 
     /* challenge section  */
-    #challenge{
+    #challenge {
         padding: 40px 20px;
     }
-    .challenge-container{
+
+    .challenge-container {
         width: 100%;
-        
+
     }
-    .challenge-content{
+
+    .challenge-content {
         padding: 40px 20px;
         display: flex;
         flex-direction: column;
         text-align: center;
     }
+
     .social-logos {
-    
-       display: flex;
-       justify-content: center;
-       align-items: center;
-    
+
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
     }
+
+    /* footer section  */
+    
 }
