--- a/style.css
+++ b/style.css
@@ -91,6 +91,7 @@ body {
 }
 
 .btn {
+    /* border: 1px solid #28db10; */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -98,48 +99,39 @@ body {
     font-size: 1rem;
     font-weight: 600;
     color: white;
-    padding: 16px 12px;
+    padding: 12px 16px;
     border-radius: 10000px;
     border: none;
     text-align: center;
 
 }
 
-
-
-.btn i {
-    width: 20px;
-    height: 20px;
-}
-
 .menubar {
-    width: 24px;
-    height: 24px;
-    color: white;
     display: none;
 }
 
-/* hero section  */
+/* banner section  */
 
-#hero {
-    min-height: clamp(400px , 60vh, 1200px);
+#banner {
+
+    min-height: clamp(400px, 60vh, 600px);
     background: url(./assets/hero-bg.png) center / cover no-repeat;
     display: flex;
     justify-content: center;
 }
 
-.hero-container {
+.banner-container {
     margin: 100px auto;
     display: flex;
     flex-direction: column;
     gap: 40px;
 }
 
-.hero-content {
+.banner-content {
     text-align: center;
 }
 
-.hero-content .hero-head {
+.banner-content .hero-head {
     font-size: 4rem;
     font-weight: bolder;
     color: white;
@@ -152,7 +144,7 @@ body {
     margin-bottom: 24px;
 }
 
-.hero-buttons {
+.banner-buttons {
 
     display: flex;
     justify-content: center;
@@ -161,7 +153,7 @@ body {
 
 }
 
-.hero-btn1 {
+.banner-btn1 {
     padding: 12px 20px;
     display: flex;
     justify-content: center;
@@ -174,7 +166,7 @@ body {
 
 }
 
-.hero-btn1 p {
+.banner-btn1 p {
     font-size: 1rem;
     font-weight: 600;
     text-transform: capitalize;
@@ -182,7 +174,7 @@ body {
 }
 
 
-.hero-btn2 {
+.banner-btn2 {
     background: transparent;
     padding: 12px 20px;
     display: flex;
@@ -195,12 +187,12 @@ body {
 
 }
 
-.hero-btn2 img {
+.banner-btn2 img {
     color: #00FF88;
 
 }
 
-.hero-btn2 p {
+.banner-btn2 p {
     font-size: 1rem;
     font-weight: 600;
     text-transform: capitalize;
@@ -215,7 +207,7 @@ body {
 .bg-img {
     width: max-content;
     padding: 69px 75px 81px 75px;
-    background: url(./assets/hero-circle.png) center/contain no-repeat;
+    background: url(./assets/hero-circle.png) center / contain no-repeat;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -507,10 +499,20 @@ body {
 /* footer section  */
 
 #footer {
-    padding: 120px 0;
+
     width: 100%;
-    height: auto;
-    background: url(./assets/footer-bg.png) center/cover no-repeat;
+    min-height: clamp(400px, 60vh, 600px);
+    /* background: url(./assets/footer-bg.png) center / cover no-repeat; */
+    background-image: url(./assets/footer-bg.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .brand-container ul {
@@ -526,7 +528,6 @@ body {
 
 }
 
-.brand-container ul li {}
 
 .brand-container ul a {
     text-decoration: none;
@@ -545,11 +546,16 @@ body {
     align-items: center;
     gap: 32px;
 }
-.brand-container p{
+
+.brand-container p {
     font-size: 1rem;
     color: #FAFAFA;
 }
+.copy-right{
+    
+    border-top: 1px solid white;
 
+}
 
 
 /* small device  */
@@ -568,8 +574,8 @@ body {
         display: none;
     }
 
-    .menubar {
-
+    .navbar .menubar {
+        background: transparent;
         display: block;
     }
 
@@ -582,13 +588,14 @@ body {
         font-size: 35px;
     }
 
-    /* hero section  */
-    #hero {
+    /* banner section  */
+    #banner {
         width: 100%;
         padding: 40px 20px;
     }
 
-    .hero-container {
+    .banner-container {
+        margin: 0;
         width: 100%;
 
     }
@@ -679,5 +686,24 @@ body {
     }
 
     /* footer section  */
-    
+    #footer {
+
+        background-size: cover;
+        background-position: center;
+        min-height: 220px;
+        height: auto;
+        padding: 2rem 1rem;
+
+
+
+    }
+
+    .brand-container ul {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    .footer-container p {
+        text-align: center;
+    }
 }
