--- a/style.css
+++ b/style.css
@@ -519,7 +519,7 @@ body {
     gap: 8px;
 }
 
-.social-logos div {
+.social-logos .social-icon {
     width: 40px;
     height: 40px;
     border-radius: 50%;
@@ -528,6 +528,50 @@ body {
     justify-content: center;
     align-items: center;
     gap: 8px;
+    position: relative;
+    cursor: pointer;
+}
+
+.social-icon::before{
+    content: attr(data-social);
+    position: absolute;
+    padding: 10px 16px;
+    border-radius: 40px;
+    background-color: var(--accent-color);
+    border: none;
+    transform: translateY(-55px) rotate(25deg);
+    opacity: 0;
+    transition: 0.5s;
+
+
+}
+.social-icon:hover{
+   background-color: var(--accent-color);
+   border: none;
+}
+
+.social-icon:hover::before{
+    transform: translateY(-55px) rotate(0);
+    opacity: 1;
+    transition: 0.5s;
+}
+
+.social-icon::after{
+    content: " ";
+    position: absolute;
+    height: 0;
+    width: 0;
+    border-left: 8px solid transparent;
+    border-right: 8px solid transparent;
+    border-top: 10px solid var(--accent-color);
+    transform: translateY(-30px) rotate(25deg);
+    opacity: 0;
+    transition: 0.5s;
+}
+.social-icon:hover::after{
+    transform: translateY(-30px) rotate(0);
+    opacity: 1;
+    transition: 0.5s;
 }
 
 .host-details h2 {
